fixed prev button left value when menu is collapsed

--- a/app/assets/stylesheets/visualization.css.less
+++ b/app/assets/stylesheets/visualization.css.less
@@ -364,3 +364,12 @@ div#share a:hover, ul#share-links a:hover {
     margin-left: 0px;
   }
 }
+
+@media (max-width: 979px) {
+  #visualization_row5{
+    #previous_visual{
+      left: 0;
+    }
+  }
+}
+
